--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Matthew Marion Moncada",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "^0.11.1"
+    "@11ty/eleventy": "^0.11.1",
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0"
   }
 }
